<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.main.MainActivity">

    <Button
        android:id="@+id/btn_reference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickReference"
        android:text="@string/main_btn_reference" />

    <Button
        android:id="@+id/btn_training"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickTraining"
        android:text="@string/main_btn_training" />

    <Button
        android:id="@+id/btn_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickTest"
        android:text="@string/main_btn_test" />

</LinearLayout>
