<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.test.TestActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:title="@string/app_name" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/label_question_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="end"
                android:text="@string/test_question_number"
                android:textSize="16sp"
                android:typeface="monospace"
                app:fontFamily="monospace"
                tools:text="Question 3/20" />

            <TextView
                android:id="@+id/label_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/test_question"
                android:textSize="20sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/label_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:textColor="@color/colorStatusCode"
                android:textSize="32sp"
                android:typeface="monospace"
                app:fontFamily="monospace"
                tools:text="404" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:padding="16dp">

                <EditText
                    android:id="@+id/input_answer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:singleLine="true"
                    android:typeface="monospace"
                    tools:text="Not Found" />

                <Button
                    android:id="@+id/btn_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/button_default"
                    android:onClick="clickAccept"
                    android:text="@string/test_accept" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
